- Drastically simplified expand/collapse animation, fixed for FF - Added lifecycle events for ViewContainerMixin addChild/removeChild - Added improved logging to HttpServer minification

--- a/autom8_client_node/client/css/devicerow-grouped.less
+++ b/autom8_client_node/client/css/devicerow-grouped.less
@@ -10,6 +10,7 @@
 /* container for all sub-devices */
 .device-group-devices {
     margin: 0px 0px 0px 10px;
+    height: 0; /* will be animated as necessary */
     overflow: hidden;
 
     /* child rows */
